reference now correctly aligned to lower part of page

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
 }
 
 .App-main {
-  min-height: 100vh;
+  min-height: 85vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,14 +27,10 @@ main {
   flex-direction: column;
 }
 
-aside {
-  font-size: small;
-  display: inline-block;
-  padding: 1em;
-}
-
-aside a {
+footer {
   color: white;
+  padding: 1em;
+  text-align: center;
 }
 
 .Dice {
